--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/iOS-SDK"]
-	path = submodules/iOS-SDK
-	url = git@github.com:ooyala/iOS-SDK.git
+[submodule "ios-sdk"]
+	path = ios-sdk
+	url = git@github.services.ooyala.net:playback-app/ios-sdk
