--- a/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp.xcodeproj/xcshareddata/xcschemes/OoyalaSkinSampleApp.xcscheme
+++ b/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp.xcodeproj/xcshareddata/xcschemes/OoyalaSkinSampleApp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,38 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "972ED84A1AE6EEEB005043DC"
-               BuildableName = "OoyalaSkinSDK.framework"
-               BlueprintName = "OoyalaSkinSDK"
-               ReferencedContainer = "container:../../sdk/OoyalaSkinSDK/OoyalaSkinSDK.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0B0D803E1AB7F8D300CDD091"
-               BuildableName = "OoyalaSDK.framework"
-               BlueprintName = "OoyalaSDK"
-               ReferencedContainer = "container:../../ios-sdk/sdk/OoyalaSDK.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "OoyalaSkin.app"
-               BlueprintName = "OoyalaSkin"
-               ReferencedContainer = "container:OoyalaSkin.xcodeproj">
+               BuildableName = "OoyalaSkinSampleApp.app"
+               BlueprintName = "OoyalaSkinSampleApp"
+               ReferencedContainer = "container:OoyalaSkinSampleApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "OoyalaSkin.app"
-            BlueprintName = "OoyalaSkin"
-            ReferencedContainer = "container:OoyalaSkin.xcodeproj">
+            BuildableName = "OoyalaSkinSampleApp.app"
+            BlueprintName = "OoyalaSkinSampleApp"
+            ReferencedContainer = "container:OoyalaSkinSampleApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -81,9 +53,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "OoyalaSkin.app"
-            BlueprintName = "OoyalaSkin"
-            ReferencedContainer = "container:OoyalaSkin.xcodeproj">
+            BuildableName = "OoyalaSkinSampleApp.app"
+            BlueprintName = "OoyalaSkinSampleApp"
+            ReferencedContainer = "container:OoyalaSkinSampleApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -100,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "OoyalaSkin.app"
-            BlueprintName = "OoyalaSkin"
-            ReferencedContainer = "container:OoyalaSkin.xcodeproj">
+            BuildableName = "OoyalaSkinSampleApp.app"
+            BlueprintName = "OoyalaSkinSampleApp"
+            ReferencedContainer = "container:OoyalaSkinSampleApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
