--- a/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
+++ b/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
@@ -27,6 +27,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>fontawesome-webfont.ttf</string>
+        <string>ooyala_icons.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
