--- a/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
+++ b/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
@@ -27,7 +27,8 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>fontawesome-webfont.ttf</string>
-        <string>alice.ttf</string>
+		<string>alice.ttf</string>
+		<string>RobotoCondensed-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
