--- a/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
+++ b/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
@@ -26,6 +26,7 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Roboto-Regular.ttf</string>
 		<string>fontawesome-webfont.ttf</string>
 		<string>alice.ttf</string>
 		<string>RobotoCondensed-Regular.ttf</string>
