[PBA-2472] Add configurable volume thumb image

--- a/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
+++ b/app/OoyalaSkinSampleApp/OoyalaSkinSampleApp/Info.plist
@@ -50,5 +50,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>VolumeThumbImage</key>
+	<string>VolumeThumb</string>
 </dict>
 </plist>
