--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sdk/OoyalaSkinSDK/skin-config"]
 	path = app/OoyalaSkinSampleApp/skin-config
-	url = git@github.com:ooyala/skin-config.git
+	url = https://github.com/ooyala/skin-config.git 
