--- a/sdk/OoyalaSkinSDK/package.json
+++ b/sdk/OoyalaSkinSDK/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "babel-jest": "*",
-    "jest-cli": "0.4.18"
+    "jest-cli": "~0.7.0"
   },
   "dependencies": {
     "react-native": "^0.13.2"
