integration of playback style layouts

--- a/sdk/OoyalaSkinSDK/android/app/src/main/AndroidManifest.xml
+++ b/sdk/OoyalaSkinSDK/android/app/src/main/AndroidManifest.xml
@@ -11,13 +11,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.ooyala.sample.lists.BasicPlaybackListActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.ooyala.sample.players.BasicPlaybackVideoPlayerActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
