--- a/sdk/OoyalaSkinSDK/OoyalaSkinSDK.xcodeproj/xcshareddata/xcschemes/OoyalaSkinSDK.xcscheme
+++ b/sdk/OoyalaSkinSDK/OoyalaSkinSDK.xcodeproj/xcshareddata/xcschemes/OoyalaSkinSDK.xcscheme
@@ -20,24 +20,60 @@
                ReferencedContainer = "container:OoyalaSkinSDK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CA2C6FAE1BEA8599006B86BC"
+               BuildableName = "OoyalaSkinSDKTests.xctest"
+               BlueprintName = "OoyalaSkinSDKTests"
+               ReferencedContainer = "container:OoyalaSkinSDK.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CA2C6FAE1BEA8599006B86BC"
+               BuildableName = "OoyalaSkinSDKTests.xctest"
+               BlueprintName = "OoyalaSkinSDKTests"
+               ReferencedContainer = "container:OoyalaSkinSDK.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "972ED84A1AE6EEEB005043DC"
+            BuildableName = "OoyalaSkinSDK.framework"
+            BlueprintName = "OoyalaSkinSDK"
+            ReferencedContainer = "container:OoyalaSkinSDK.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
@@ -52,10 +88,10 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
