[android-complete] add new gitignores for android build

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ sdk/react/node_modules
 sdk/react/coverage
 **/build/
 **/react/iOS/
+**/react/Android/
+
+**/.gradle/
+**/local.properties
 
 ## Other
 *.xccheckout
@@ -12,4 +16,4 @@ sdk/react/coverage
 
 # OS X
 .DS_Store
-OoyalaSkinSDK-iOS.zip
+OoyalaSkinSDK-*.zip
