Add commented Sample App settings.gradle

--- a/sdk/android/settings.gradle
+++ b/sdk/android/settings.gradle
@@ -1,1 +1,4 @@
 include ':ooyalaSkinSDK'
+
+//include ':app'
+//project(':app').projectDir=new File(settingsDir, '../../../android-sample-apps/OoyalaSkinSampleApp/app')
