--- a/sdk/android/ooyalaSkinSDK/build.gradle
+++ b/sdk/android/ooyalaSkinSDK/build.gradle
@@ -28,5 +28,5 @@ android {
 dependencies {
     compile files('libs/OoyalaSDK.jar')
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.facebook.react:react-native:0.20.+'
+    compile 'com.facebook.react:react-native:0.16.1'
 }
