[PBA-3908] fix build

--- a/sdk/android/ooyalaSkinSDK/build.gradle
+++ b/sdk/android/ooyalaSkinSDK/build.gradle
@@ -25,8 +25,37 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+task copyLibs(type: Copy) {
+    from new File(System.getProperty("user.dir"), '../../vendor/Ooyala/OoyalaSDK-Android/OoyalaSDK.jar')
+    from new File(System.getProperty("user.dir"), '../../vendor/Facebook/react-native-0.26.2.aar')
+    into new File(System.getProperty("user.dir"), './ooyalaSkinSDK/libs')
+    doLast {
+        println "Libs updated."
+    }
+}
+
+tasks.copyLibs.execute()
+
 dependencies {
     compile files('libs/OoyalaSDK.jar')
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.facebook.react:react-native:0.16.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile group: 'com.facebook.fresco', name: 'fresco', version: '0.8.1'
+    compile group: 'com.facebook.fresco', name: 'imagepipeline-okhttp', version: '0.8.1'
+    compile group: 'com.facebook.stetho', name: 'stetho', version: '1.2.0'
+    compile group: 'com.facebook.stetho', name: 'stetho-okhttp', version: '1.2.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.2.3'
+    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
+    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.5.0'
+    compile group: 'com.squareup.okhttp', name: 'okhttp-ws', version: '2.5.0'
+    compile group: 'com.squareup.okio', name: 'okio', version: '1.6.0'
+    compile group: 'org.webkit', name: 'android-jsc', version: 'r174650'
+    compile(name:'react-native-0.26.2', ext:'aar')
 }
