--- a/sdk/react/package.json
+++ b/sdk/react/package.json
@@ -30,7 +30,7 @@
     "jest-cli": "~0.7.0"
   },
   "dependencies": {
-    "react": "^15.0.2",
+    "react": "15.0.2",
     "react-native": "^0.26.2"
   }
 }
