--- a/sdk/android/ooyalaSkinSDK/build.gradle
+++ b/sdk/android/ooyalaSkinSDK/build.gradle
@@ -34,7 +34,7 @@ repositories {
 
 task copyLibs(type: Copy) {
     from new File(projectDir, '../vendor/Ooyala/OoyalaSDK-Android/OoyalaSDK.jar')
-    from new File(projectDir, '../vendor/Facebook/react-native-0.26.2.aar')
+    from new File(projectDir, '../vendor/Facebook/react-native-0.33.0.aar')
     into new File(projectDir, './libs')
     doLast {
         println "Libs updated."
@@ -47,15 +47,17 @@ dependencies {
     compile files('libs/OoyalaSDK.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile group: 'com.facebook.fresco', name: 'fresco', version: '0.8.1'
-    compile group: 'com.facebook.fresco', name: 'imagepipeline-okhttp', version: '0.8.1'
+    compile 'com.facebook.fresco:fresco:0.11.0'
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.11.0'
     compile group: 'com.facebook.stetho', name: 'stetho', version: '1.2.0'
     compile group: 'com.facebook.stetho', name: 'stetho-okhttp', version: '1.2.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.2.3'
     compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
-    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.5.0'
-    compile group: 'com.squareup.okhttp', name: 'okhttp-ws', version: '2.5.0'
-    compile group: 'com.squareup.okio', name: 'okio', version: '1.6.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp-ws:3.4.1'
+    compile 'com.squareup.okio:okio:1.9.0'
     compile group: 'org.webkit', name: 'android-jsc', version: 'r174650'
-    compile(name:'react-native-0.26.2', ext:'aar')
+    compile(name:'react-native-0.33.0', ext:'aar')
+    compile group: 'javax.inject', name: 'javax.inject', version: '1'
 }
