--- a/sdk/android/ooyalaSkinSDK/build.gradle
+++ b/sdk/android/ooyalaSkinSDK/build.gradle
@@ -49,15 +49,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.facebook.fresco:fresco:0.11.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.11.0'
-    compile group: 'com.facebook.stetho', name: 'stetho', version: '1.2.0'
-    compile group: 'com.facebook.stetho', name: 'stetho-okhttp', version: '1.2.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.2.3'
-    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
+    compile 'com.facebook.stetho:stetho:1.2.0'
+    compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.2.3'
+    compile 'com.google.code.findbugs:jsr305:3.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
     compile 'com.squareup.okhttp3:okhttp-ws:3.4.1'
     compile 'com.squareup.okio:okio:1.9.0'
-    compile group: 'org.webkit', name: 'android-jsc', version: 'r174650'
+    compile 'org.webkit:android-jsc:r174650'
     compile(name:'react-native-0.33.0', ext:'aar')
-    compile group: 'javax.inject', name: 'javax.inject', version: '1'
+    compile 'javax.inject:javax.inject:1'
 }
