--- a/sdk/android/ooyalaSkinSDK/build.gradle
+++ b/sdk/android/ooyalaSkinSDK/build.gradle
@@ -33,8 +33,8 @@ repositories {
 }
 
 task copyLibs(type: Copy) {
-    from new File(projectDir, '../vendor/Ooyala/OoyalaSDK-Android/OoyalaSDK.jar')
-    from new File(projectDir, '../vendor/Facebook/react-native-0.33.0.aar')
+    from new File(projectDir, '../../../vendor/Ooyala/OoyalaSDK-Android/OoyalaSDK.jar')
+    from new File(projectDir, '../../../vendor/Facebook/react-native-0.33.0.aar')
     into new File(projectDir, './libs')
     doLast {
         println "Libs updated."
